--- a/index.html
+++ b/index.html
@@ -105,6 +105,14 @@ body {font-family: "Lato", sans-serif; background-color: black;}
         </div>
         <div class="w3-third w3-margin-bottom">
           <div class="w3-container w3-white">
+            <p><b>Kain</b></p>
+            <p class="w3-opacity">#malware-analysis #tool #forensics</p>
+            <p>eml metadata parser.</p>
+            <button class="w3-button w3-black w3-margin-bottom"><a href='https://github.com/rf-peixoto/kain'>See Code</a></button>
+          </div>
+        </div>
+        <div class="w3-third w3-margin-bottom">
+          <div class="w3-container w3-white">
             <p><b>rogue</b></p>
             <p class="w3-opacity">#brute-force #tool</p>
             <p>Python RCE & AV Evasion Dropper.</p>
