--- a/index.html
+++ b/index.html
@@ -119,6 +119,14 @@ body {font-family: "Lato", sans-serif; background-color: black;}
             <button class="w3-button w3-black w3-margin-bottom"><a href='https://github.com/rf-peixoto/rogue'>See Code</a></button>
           </div>
         </div>
+        <div class="w3-third w3-margin-bottom">
+          <div class="w3-container w3-white">
+            <p><b>Phishing Pot</b></p>
+            <p class="w3-opacity">#brute-force #tool</p>
+            <p>Collection of phishing samples.</p>
+            <button class="w3-button w3-black w3-margin-bottom"><a href='https://github.com/rf-peixoto/phishing_pot'>See Code</a></button>
+          </div>
+        </div>
       </div>
     </div>
   </div>
