--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ body {font-family: "Lato", sans-serif; background-color: black;}
           <div class="w3-container w3-white">
             <p><b>Phishing Pot</b></p>
             <p class="w3-opacity">#brute-force #tool</p>
-            <p>Collection of phishing samples.</p>
+            <p>Collection of phishing attack samples.</p>
             <button class="w3-button w3-black w3-margin-bottom"><a href='https://github.com/rf-peixoto/phishing_pot'>See Code</a></button>
           </div>
         </div>
